--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/alyssa.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/Alyssa.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Alyssa</h2>
@@ -236,7 +236,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/debbie.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/Debbie.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Debbie</h2>
@@ -251,7 +251,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/deedee.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/DeeDee.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Dee Dee</h2>
@@ -266,7 +266,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/dick.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/Dick.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Dick</h2>
@@ -281,7 +281,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/felecia.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/Felecia.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Felecia</h2>
@@ -311,7 +311,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/hal.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/Hal.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Hal</h2>
