--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/Debbie.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/Debbie.JPG" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Debbie</h2>
@@ -356,7 +356,7 @@
         <div class="eachCard">
           <div class="cardContent">
             <div class="cardImage">
-              <img src="assets/img/Kirsten.jpg" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
+              <img src="assets/img/Kirsten.JPG" alt="" style="height: 220px;padding-right: 15px;border-radius: 10px;">
             </div>
             <div class="cardInfo">
               <h2 class="cardTitle">Kirsten</h2>
