--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YFMQ97B7YN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YFMQ97B7YN');
+</script>
     <meta charset="utf-8">
     <title>MetroBrokers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
