first round of changes

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,9 @@
 
           <div class="container" id="endBox" style="flex-direction: column;">
             <img src="assets/img/traditionalagency.png" alt="" style="width: 250px;padding: 15px;">
+            <h1 class="areaH">Enter your data</h1>
                    <div class="card" style="    min-width: 320px;
-                   height: 514px;">
+                   height: 570px;">
                      <div class="box othercard">
                        <div class=" content">
                          <div class="ip">
@@ -98,13 +99,14 @@
                           <p>Annual Misc. Fees</p>
                         </div>
                         <hr>
+                          <button style="font-size:13px;" id="submitForm" class="submit action-button" value="Submit">Calculate </button>
                         <div class="ipe">
                           <div class="event-log-e othercs" id="otherP">$</div>
                           <p style="font-size: 15.5px;">Estimated Annual Net Profit</p>
                         </div>
-
                        </div>
                      </div>
+
                    </div>
                  </div>
         </div>
@@ -113,12 +115,11 @@
                    <div class="card" style="min-width: 320px; height: 266px;">
                      <div class="box metrocard">
                        <div class="metrocontent content">
-                          <button style="font-size:13px;" id="submitForm" class="submit action-button" value="Submit">Calculate </button>
 
-                          <p id="vs">VERSUS</p>
+                          <p id="vs">Keep More, With Metro</p>
                           <div class="ipe">
                             <div class="event-log-e diff green" id="calcDiff">$</div>
-                            <p style="text-align: center;"> Estamated Difference <br>in Net Profit</p>
+                            <p style="text-align: center;"> Estimated Difference <br>in Net Profit</p>
                           </div>
                        </div>
                      </div>
@@ -137,8 +138,9 @@
         <div class="col-xs col-sm col-md col-lg col-xl-5">
           <div class="container"  id="startBox" style="flex-direction: column;">
             <img src="assets/img/logo.png" alt="" style="width: 250px;padding: 15px 15px 51px 15px;">
+            <h1 class="areaH">Pick your plan</h1>
                    <div class="card" style="    min-width: 320px;
-                   height: 514px;">
+                   height: 570px;">
                      <div class="box metrocard">
                        <div class="metrocontent content">
                          <div class="ip">
@@ -154,9 +156,9 @@
                            <p>Annual MetroBroker's Fee ($124/M)</p>
                          </div>
                          <select id="office" class="officetype">
+                          <option value="6300">MetroPlex</option>
                          	<option value="10500">Shared Office</option>
                          	<option value="15420">Private Office</option>
-                         	<option value="6300">MetroPlex</option>
                           <option value="2700">Evolution</option>
                        	</select>
                         <div class="ip">
@@ -164,6 +166,7 @@
                           <p>Annual Misc. Fees</p>
                         </div>
                         <hr>
+                          <button style="font-size:13px;" id="submitFormTwo" class="submit action-button" value="Submit">Calculate </button>
                         <div class="ipe">
                           <div class="event-log-e" id="metroP" data-type="currency">$</div>
                           <p style="font-size: 16px;">Estimated Annual Net Profit</p>
@@ -234,7 +237,7 @@
             <div class="cardInfo">
               <h2 class="cardTitle">Alyssa</h2>
               <span class="cardSubTitle">Alyssa Needham</span><br>
-              <span class="cardSubTitle"><b>DKT Realty, Inc.</b></span>
+              <span class="cardSubTitle"><b>Alysson Needham Realty, LLC.</b></span>
               <p class="cardText"> </p>
               <a href="tel:270-9871"><img src="assets/img/phone.png"  alt="Phone" style="width: 30px; margin-top: -2px;"></a>
               <a href="mailto: alyssanicoleneedham@gmail.com"><img src="assets/img/email.png"  alt="Phone" style="width: 30px; margin-top: -2px;"></a>
