--- a/public/index.html
+++ b/public/index.html
@@ -108,10 +108,12 @@
                      </div>
 
                    </div>
+                   <p>Click Calculate too see Changes.</p>
                  </div>
+
         </div>
         <div class="col-xs col-sm col-md col-lg col-xl-2 	.d-none .d-xl-block" >
-          <div class="container" style="height: 100%;">
+          <div class="container mobilem" style="height: 100%;">
                    <div class="card" style="min-width: 320px; height: 266px;">
                      <div class="box metrocard">
                        <div class="metrocontent content">
@@ -126,11 +128,13 @@
                    </div>
                    <h1 src="assets/img/down.png" alt="" style="position: absolute;
                         padding: 399px 0px 0px 0px;
-                        font-size: 17px;
+                        font-size: 18px;
                         font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif!important;
                         font-weight: 600;
+                        line-height: 25px;
+                        text-align: center;
                         color: #000000;">
-                          See the Difference? Give us a call.
+                          See the Difference? Give us a call.<br>(970)243-3376
                   </h1>
                  </div>
 
@@ -176,7 +180,7 @@
 
 
                    </div>
-
+<p>Click Calculate too see Changes.</p>
                  </div>
         </div>
         </form>
@@ -193,15 +197,15 @@
       <div class="row" style="padding-bottom:100px;">
         <div class="col-lg-4 col-md-6 officetype">
 <h3>Shared Office</h3>
-<p>Two People,<br> One Office.</p>
+<p><b>100%</b><br>Two People,<br> One Office.</p>
         </div>
         <div class="col-lg-4 col-md-6 officetype">
           <h3>MetroPlex</h3>
-          <p>Work from home, but have access<br> to the full office staff.</p>
+          <p><b>100%</b><br>Work from home, but have access<br> to the full office staff.</p>
         </div>
         <div class="col-lg-4 col-md-6 officetype">
           <h3>Evolution</h3>
-          <p>Work from home, access the office staff,<br> pay 10% of your commission to the house.</p>
+          <p><b>90/10</b><br>Work from home, access the office staff,<br> pay 10% of your commission to the house.</p>
         </div>
 
       </div>
