--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       <div class="navB">
         <div class="left">
 
-              <img src="assets/img/logo.png" alt="" style="width: 350px;padding: 15px;">
+              <img src="assets/img/logo2.png" alt="" style="width: 350px;padding: 15px;padding-top:25px;">
 
         </div>
         <div class="right">
@@ -67,7 +67,7 @@
             <img src="assets/img/traditionalagency.png" alt="" style="width: 250px;padding: 15px;">
             <h1 class="areaH">Enter your data</h1>
                    <div class="card" style="    min-width: 320px;
-                   height: 570px;">
+                   height: 636px;">
                      <div class="box othercard">
                        <div class=" content">
                          <div class="ip">
@@ -79,6 +79,7 @@
                            <p>Annual Commission</p>
                          </div>
                          <select id="ffee" class="split othercs">
+                           <option value="1">0%</option>
                           <option value=".99">1%</option>
                           <option value=".98">2%</option>
                           <option value=".97">3%</option>
@@ -88,15 +89,19 @@
                         </select>
                         <p class="selp" id="franFeeT"> Annual Franchise Fee</p>
 
-                         <select id="split" class="split othercs">
-                          <option value=".9">90/10 Split</option>
-                          <option value=".8">80/20 Split</option>
+                         <select id="split" class="split othercs">                  
                           <option value=".7">70/30 Split</option>
-
+                          <option value=".8">80/20 Split</option>
+                          <option value=".9">90/10 Split</option>
+                           <option value="1">100/0 Split</option>
                         </select>
                         <div class="ip">
+                          <input id="office_fees" data-type="currency" type="text" placeholder="$000,000" name="officeFees" value="">
+                          <p>Add Office Fees</p>
+                        </div>
+                        <div class="ip">
                           <input id="misc_fees" data-type="currency" type="text" placeholder="$000,000" name="miscFees" value="">
-                          <p>Annual Misc. Fees</p>
+                          <p>Add Misc. Fees</p>
                         </div>
                         <hr>
                           <button style="font-size:13px;" id="submitForm" class="submit action-button" value="Submit">Calculate </button>
@@ -144,7 +149,7 @@
             <img src="assets/img/logo.png" alt="" style="width: 250px;padding: 15px 15px 51px 15px;">
             <h1 class="areaH">Pick your plan</h1>
                    <div class="card" style="    min-width: 320px;
-                   height: 570px;">
+                   height: 636px;">
                      <div class="box metrocard">
                        <div class="metrocontent content">
                          <div class="ip">
@@ -164,7 +169,9 @@
                          	<option value="10500">Shared Office</option>
                          	<option value="15420">Private Office</option>
                           <option value="2700">Evolution</option>
+
                        	</select>
+                        <p class="sp">Select Plan</p>
                         <div class="ip">
                           <div class="event-log-c">$</div>
                           <p>Annual Misc. Fees</p>
