shadow and txt c

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
                         </select>
                         <p class="selp" id="franFeeT"> Annual Franchise Fee</p>
 
-                         <select id="split" class="split othercs">                  
+                         <select id="split" class="split othercs">
                           <option value=".7">70/30 Split</option>
                           <option value=".8">80/20 Split</option>
                           <option value=".9">90/10 Split</option>
@@ -126,7 +126,7 @@
                           <p id="vs">Keep More, With Metro</p>
                           <div class="ipe">
                             <div class="event-log-e diff green" id="calcDiff">$</div>
-                            <p style="text-align: center;"> Estimated Difference <br>in Net Profit</p>
+                            <p style="text-align: center;"> Estimated Difference</p>
                           </div>
                        </div>
                      </div>
